tests/failures/missing_equals_in_opt.stderr
error: expected `=`
  --> tests/failures/missing_equals_in_opt.rs:18:16
   |
18 |     macro_name my_macro,
   |                ^^^^^^^^
